deployment/k8s/monitoring/monitoring-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: observibility
  labels:
    app.kubernetes.io/name: monitoring-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: monitoring-grafana
            port:
              number: 80
  - host: prometheus.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: monitoring-kube-prometheus-prometheus
            port:
              number: 9090
  - host: jaeger.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jaeger
            port:
              number: 16686
